on 1.1 JREs download the source and create a custom implementation by
stripping out all the complex classloader management code.

For further details, please see the Jakarta Commons Logging website:
  http://jakarta.apache.org/commons/logging.

For the very latest news, hints, FAQs etc. please see the
Jakarta Commons Logging wiki site:
  http://wiki.apache.org/jakarta-commons/Logging

== New Features ==

* Jar files now have release-numbers embedded in the names, for easier management.

* New jar file commons-logging-adapters-xxx.jar is now provided. This can be
  used to resolve class cast conflicts where parts of commons-logging are
  deployed via different classloaders. It is not expected to be frequently
  used; it is only necessary in situations where a container has deployed
  commons-logging-api.jar and a webapp wants to bind to a third-party
  logging implementation such as log4j. In this case, the webapp can
  experience problems if it deploys commons-logging.jar as this causes
  duplicates of the core commons-logging classes, but commons-logging-adapters
  can be safely used.

* New internal diagnostics feature. If commons-logging is behaving in an
  unexpected manner, you can now set system property
    org.apache.commons.logging.diagnostics.dest
  to the value STDOUT, STDERR or a filename. As commons-logging initialises
  itself for each new contextClassLoader it detects, useful information will
  be output about which logging library is bound to and why.
  
* JCL now prefers to "make a best attempt" in problem scenarios rather than
  report an error and fail to initialise. New configurable attributes
  ALLOW_FLAWED_HIERARCHY, ALLOW_FLAWED_DISCOVERY and ALLOW_FLAWED_CONTEXT are
  provided to control startup behavior. The default values for these are all
  true, meaning that commons-logging attempts to recover from bad logging
  configuration situations by finding *some* logger to use even when it isn't